<resources>
    <string name="app_name">MySgIsland</string>
    <string name="title">Name</string>
    <string name="hint_title">Enter island name here</string>
    <string name="description">Description</string>
    <string name="hint_desc">Enter description here</string>
    <string name="square_km">Square km</string>
    <string name="hint_km">Enter square km here</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert Island</string>
    <string name="title_activity_second">Show Island</string>
    <string name="title_activity_third">Modify Island</string>

    <string name="id">island ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all island with 5 stars</string>

    <string-array name="squarekm">
        <item>Default</item>
    </string-array>
</resources>
